# kobe

./: .gitmodules  Pipfile  README.md  pyproject.toml
data-exploration/: Worksheet 2, Sklearn.ipynb  week2.ipynb
model/: model.ipynb
src/: multiple_train_test_splits.py  preprocessor.py  split.ipynb
src/data-exploration/: shot_zones.ipynb  week2.ipynb
src/model/: baseline.csv  baseline.ipynb  decision_tree.ipynb  knn_classifier.ipynb  knn_v2.ipynb  model.ipynb  nn.ipynb
test/: __init__.py  test_multiple_train_test_splits.py
