[tool.poetry]
name = "kobe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
sklearn = "^0.0"
matplotlib = "^3.1.3"
jupyter = "^1.0.0"
ipykernel = "^5.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
